--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
-    <div class="header">
+    <!-- changed div to header -->
+    <header class ="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <!-- changed div to section -->
+        <section>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,8 +24,8 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </section>
+    </header>
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
@@ -48,13 +50,14 @@
             </p>
         </div>
     </div>
-    <div class="benefits">
-        <div class="benefit-lead">
+    <class="benefits">
+        <!-- changed div class to semantic aside -->
+        <div class="benefit-lead"> 
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
+            </p> 
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
@@ -70,9 +73,10 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </>
     <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <!-- changed h2 to h4 to put headers in numerical order -->
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
