--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
         </nav>
     </header>
 
-    <!-- changed div to section -->
-    <section class="hero"></section>
+    <!-- changed div to figure -->
+    <figure class="hero"></figure>
 
     <!-- changed to div to main -->
     <main class="content">
         <!-- changed div to section -->
-        <section class="search-engine-optimization">
+        <!-- added section id -->
+        <section id="search-engine-optimization" section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        <!-- changed div to section -->   
+            </p>   
         </section>
         <!-- changed div to section -->
         <section id="online-reputation-management" class="online-reputation-management">
@@ -48,13 +48,12 @@
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        <!-- changed div to section -->
         </section>
         <!-- changed div to section -->
         <section id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
-            <p>
+            <
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
