--- a/index.html
+++ b/index.html
@@ -84,15 +84,16 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </section>
-    </main>
+    </aside>
 
-    <div class="footer">
+    <!-- changed div class=footer to just footer -->
+    <footer>
         <!-- changed h2 to h4 to put headers in numerical order -->
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
