--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <!-- changed div to section -->
         <!-- added section id -->
         <section id="search-engine-optimization" section class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <!-- added alt text -->
+            <img src="./assets/images/search-engine-optimization.jpg"  alt= "notebook with search engine optimization showing different tools to navigate through SEO" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -43,7 +44,7 @@
         </section>
         <!-- changed div to section -->
         <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt= "laptop with screen displaying reputation text with colored graphs" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -51,9 +52,9 @@
         </section>
         <!-- changed div to section -->
         <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt= "table with social media icons and people gathered around" class="float-left" />
             <h2>Social Media Marketing</h2>
-            <
+            <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
@@ -63,7 +64,7 @@
         <!-- changed div class to section -->
         <section class="benefit-lead"> 
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt= "icon of gear pointing downward to dollar sign" /> 
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p> 
@@ -71,7 +72,7 @@
         <!-- changed div to section -->
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt= "light bulb icon with signals"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -79,14 +80,14 @@
         <!-- changed div to section -->
         <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png " alt= "gear icons with money symbols" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </section>
     </aside>
 
-    <!-- changed div class=footer to just footer -->
+    <!-- changed div class="footer" to just footer -->
     <footer>
         <!-- changed h2 to h4 to put headers in numerical order -->
         <h4>Made with ❤️️ by Horiseon</h4>
